setup is complete and talks about node

--- a/sub/test/views/setup.handlebars
+++ b/sub/test/views/setup.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="jumbotron">
-		<h1>Foursquare API</h1>
-		<p>Let's get started</p>
+		<h1>How-To: Foursquare API</h1>
+		<p>Let's setup for success. </p>
 	</div>
 	<div class="content">
 		<p>Before we can start making calls to the API to get data, we will need to setup our system and understand how to make the calls and what happensa after we make the calls. This section will help you setup your system.</p>
