made changes to

--- a/sub/test/views/layouts/main.handlebars
+++ b/sub/test/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
 					<li><a href="/user-friends">Friends</a></li>
 					<li><a href="/user-tips" >Tips</a></li>
 					<li><a href="/user-history">History</a></li>
+					<li><a href="/user-history">Recap</a></li>
 				</ul>
 			</div>
 		</div>
