edited main so it calls a server side script

--- a/sub/views/layouts/main.handlebars
+++ b/sub/views/layouts/main.handlebars
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="css/lavish-bootstrap.css">
     <!--Style sheet-->
 	<link rel="stylesheet" href="css/style.css">
-    <!--Client side script-->
-    <script type = "text/javascript" src ="js/databaseCalls.js"></script>
+    <!--Server side script-->
+    <script type = "text/javascript" src ="/databaseCalls.js"></script>
 </head>
 <body>
 	<!-- Add navigation -->
