Added css link to main

--- a/sub/views/layouts/main.handlebars
+++ b/sub/views/layouts/main.handlebars
@@ -5,11 +5,10 @@
 	<title>Workouts Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--boot strap sheet-->
-	<link rel="stylesheet" href="css/lavish-bootstrap.css">
+	<link rel="stylesheet" href="/public/css/lavish-bootstrap.css">
     <!--Style sheet-->
-	<link rel="stylesheet" href="css/style.css">
-    <!--Server side script-->
-    <script type = "text/javascript" src ="/databaseCalls.js"></script>
+	<link rel="stylesheet" href="/public/css/style.css">
+   
 </head>
 <body>
 	<!-- Add navigation -->
