--- a/sub/views/editWorkout.handlebars
+++ b/sub/views/editWorkout.handlebars
@@ -1,4 +1,14 @@
+<!--
 
+// CS 290 -
+// Carol D Toro
+// toroc@oregonstate.edu
+// Winter 2016
+// Assignment: Database Interactions & UI
+// Filename: editWorkout.handlebars
+// URL: http://52.33.44.25:3001/public/html/workouts.html
+//
+-->
 <!-- Server side Editing -->
 
 <div class="panel panel-default">
@@ -9,15 +19,15 @@
         <input type="hidden" name="id" id="id" value='{{this.id}}'>
         <label for="name" id="exercise">Exercise Name:</label>
         <input type="text" name="name" id="name" value="{{this.name}}">
-        
+
         <label for="reps">Repetitions:</label>
-        <input type="number" name="reps" id="reps" value="{{this.reps}}"> 
+        <input type="number" name="reps" id="reps" value="{{this.reps}}">
         <label for="weight">Weight:</label>
-        <input type="number" name="weight" id="weight" value="{{this.weight}}"> 
+        <input type="number" name="weight" id="weight" value="{{this.weight}}">
         <label for="date">Date:</label>
         <input type="text" name="date" id="date" value="{{this.date}}">
         <input type="radio" name="unit" id="lbs" {{#if this.lbs}}value="lbs" checked="checked"{{/if}}/>Pounds
-        <input type="radio" name="unit" id="lbs" {{#if this.kilo}}value="kilo" checked="checked"{{/if}}/>Kilograms 
+        <input type="radio" name="unit" id="lbs" {{#if this.kilo}}value="kilo" checked="checked"{{/if}}/>Kilograms
         <input type="submit" id="Update" name="Update" value="Update">
     </fieldset>
 </form>
